--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,28 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: ✅👑
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: A virtual proof that I'm a living creature.
 
 # Your name to show in the footer
-author: Some Person
+author: Satya Dasara
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
+  Home: "/index.html"
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Projects: "/index.html"
+  Resume: "/Satya_Dasara_Data_Scientist_Resume.pdf"
+nav-search: search
 
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/self (2).jpeg"
 
 # By default, the image is cut into a circle. You can disable this behaviour here.
 round-avatar: true
@@ -38,15 +38,17 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "sdasara95@gmail.com"
+  linkedin: sdasara95
+  #facebook: satyaraja.dasara.7
+  github: sdasara95
+  #twitter: daattali
   rss: true
+  leetcode: "sdasara"
 #  reddit: yourname
-#  linkedin: daattali
 #  xing: yourname
-#  stackoverflow: "3943160/daattali"
+  stackoverflow: "10779528/sdasara"
+  kaggle: "sdasara"
 #  snapchat: deanat78
 #  instagram: deanat78
 #  youtube: user/deanat78
@@ -68,7 +70,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+#url-pretty: "MyWebsite.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -80,15 +82,15 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
+navbar-col: "#404040"
+navbar-text-col: "#F5F5F5"
 navbar-border-col: "#EAEAEA"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-col: "#404040" #"#777777" 
+footer-text-col: "#F5F5F5"
+footer-link-col: "#000000" #"#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
