--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ footer-link-col: "#000000" #"#404040"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+gtag: "UA-166921083-1"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-166921083-1"
