--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: A virtual proof that I'm a living creature.
 timezone: "America/New_York"
 highlighter: rouge
 paginate: 6
-
+paginate_path: "/blog/page:num/"
 
 # Your name to show in the footer
 author: Satya Dasara
