--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ google_analytics: "UA-166921083-1"
 # --- Comments --- #
 
 # To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-#disqus: ""
+disqus: "sdasara95-github-io"
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
 fb_comment_id: ""
