--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,15 @@ author: Satyaraja Dasara
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Home: "/index.html"
-  About Me: "aboutme"
-  Projects: https://github.com/sdasara95
-  Resume: "/Satya_Dasara_Data_Scientist_Resume.pdf"
+  Home: "https://sdasara95.github.io/"
+  About: 
+    - Introduction: "aboutme"
+    - Resume: "/Satya_Dasara_Data_Scientist_Resume.pdf"
+    - Projects: https://github.com/sdasara95
+  Resources:
+    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Learn markdown: "https://www.markdowntutorial.com/"
+    
 nav-search: search
 
 # --- Logo --- #
@@ -76,7 +81,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-#url-pretty: "MyWebsite.com"
+url-pretty: "https://sdasara95.github.io/"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
