--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,9 @@ author: Satyaraja Dasara
 
 navbar-links:
   Home: "https://sdasara95.github.io/"
-  About: 
-    - Introduction: "aboutme"
-    - Resume: "/Satya_Dasara_Data_Scientist_Resume.pdf"
-    - Projects: https://github.com/sdasara95
+  About: "aboutme"
+  Resume: "/Satya_Dasara_Data_Scientist_Resume.pdf"
+  Projects: https://github.com/sdasara95
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
@@ -81,7 +80,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "https://sdasara95.github.io/"
+# url-pretty: "https://sdasara95.github.io/"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
